--- a/skills.html
+++ b/skills.html
@@ -38,13 +38,51 @@
         </div>
       </nav>
 
-      <div class="file">
-        <h1>
-          Certifications:
-        </h1>
-        <ul>
-          <li></li>
-        </ul>
+      <div class="file row">
+        <div class = "col">
+          <h1>
+            Certifications
+          </h1>
+          <ul>
+            <h3><a href="https://www.credly.com/badges/b8823ead-f7ab-4790-96fb-614d02ac8300/public_url">CompTIA</a></h3>
+            <img src="images/comptia-it-fundamentals-itf-certification.png">
+
+            <h3><a href="https://cdn.discordapp.com/attachments/929157608185659432/1244973853881405440/RDT_20240525_2110438423547510222593976.jpg?ex=66586141&is=66570fc1&hm=fc6b2b43a61ef6b8ecc2992d9ae063011e4dca443a206ee20c1f1e638bf02962&">Certiport</a></h3>
+            <img src="images/Screenshot 2024-05-29 150150.png">
+            <img src="images/Screenshot 2024-05-29 150220.png">
+
+            <h3><a href="https://www.codecademy.com/profiles/davidW4649379275">Codecademy</a></h3>
+            <img src="images/Screenshot 2024-05-29 143710.png">
+            <img src="images/Screenshot 2024-05-29 143823.png">
+            <img src="images/Screenshot 2024-05-29 143841.png">
+            <img src="images/Screenshot 2024-05-29 143915.png">
+            <img src="images/Screenshot 2024-05-29 143945.png">
+            <img src="images/Screenshot 2024-05-29 144012.png">
+            <img src="images/Screenshot 2024-05-29 144036.png">
+            <img src="images/Screenshot 2024-05-29 144115.png">
+            <img src="images/Screenshot 2024-05-29 144133.png">
+            <img src="images/Screenshot 2024-05-29 144158.png">
+            <img src="images/Screenshot 2024-05-29 144216.png">
+          </ul> 
+        </div>
+
+        <div class = "col">
+          <h1>
+            Skills
+          </h1>
+          <ul>
+            <li>HTML & CSS</li>
+            <li>Java</li>
+            <li>Java Script</li>
+            <li>Unity Game Engine</li>
+            <li>Graphite</li>
+            <li>Oil Pastels</li>
+            <li>Acrylic Paint</li>
+            <li>PC Assembly</li>
+            <li>Writing</li>
+          </ul>
+        </div>
+        
       </div>
     </div>
     
