--- a/projects.html
+++ b/projects.html
@@ -39,8 +39,36 @@
       </nav>
       <div class="file">
         <h1>
-          About Me
+          Projects
         </h1>
+        <h5>
+          <a href="https://github.com/CarlWheezerOfficial?tab=repositories">Github Page</a>
+        </h5>
+        <h3>
+          Games
+        </h3>
+        <a href="https://fishboysavestheworld.netlify.app/">Fishboy Saves The World (Playable)</a>
+        <br>
+        <a href="https://www.loom.com/share/8fd25429847d4283a55b27ba021565d3?sid=4466024a-0a7c-4494-8ccf-7583263f1bb8">Unity Ball Game</a>
+        <br>
+        <a href="https://www.loom.com/share/310cd540d7d243f6a1d91a534ba0d7e5">Fishboy 2 (incomplete)</a>
+        <br>
+        <a href="https://www.loom.com/share/a2616b4db16f4e18ad650c516d9e6d09?sid=d212b320-4e0e-4d3b-9154-9f65d3a813a7">Unity Runner</a>
+        <br>
+        <h3>
+          Websites
+        </h3>
+        <a href="https://clever-torte-5f5c40.netlify.app/">Color Theory</a>
+        <br>
+        <a href="https://transcendent-torte-6d62fd.netlify.app/">Interactive Story</a>
+        <br>
+        <a href="https://stupendous-marigold-060e32.netlify.app/">Old Project Compilation</a>
+        <br>
+        <a href="https://github.com/CarlWheezerOfficial/Space-invaders-revival">Attempted Restoration of an Old Project</a>
+        <h3>
+          Artworks
+        </h3>
+        <a href="https://drive.google.com/file/d/170VnFJ1U_CLYnD5UrEEUzVsr8KtBsYmp/view">Mask, Hand, and Shell.</a>
       </div>
     </div>
     
