--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <br>
         <br>
         <br>
-        
+        <p>Listen, I'm working on this during the exam period which I thought I had to be here for. Don't expect anything too high quality, I've already checked out.</p>
+
       </div>
     </div>
     
