--- a/projects.html
+++ b/projects.html
@@ -69,6 +69,8 @@
           Artworks
         </h3>
         <a href="https://drive.google.com/file/d/170VnFJ1U_CLYnD5UrEEUzVsr8KtBsYmp/view">Mask, Hand, and Shell.</a>
+        <br>
+        <a href="images/Nightosphere Portal.png">This thing</a>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
       </div>
     </div>
